--- a/views/admin/include/footer.ejs
+++ b/views/admin/include/footer.ejs
@@ -43,7 +43,7 @@
 
 <!-- Page JS -->
 <script src="/adminpanel/assets/js/dashboards-analytics.js"></script>
-
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <!-- Place this tag in your head or just before your close body tag. -->
 <script async defer src="https://buttons.github.io/buttons.js"></script>
 
